# notification_service

./: .bandit  .flake8  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Dockerfile-local  app.py  deploy.bash  docker-compose.yml  pyproject.toml  whitelist.txt
.github/workflows/: buildandpush.yml
notification_service/: __init__.py  exception.py  handler.py  sentry.py
notification_service/clients/: __init__.py  base_http.py  bsg.py  sns.py  telegram.py
notification_service/conf/: logger.py  settings.py
notification_service/schemas/: sms.py  sqs.py
notification_service/services/: sms_service.py
notification_service/sms/: __init__.py  base.py  new_order.py  order_canceled.py  order_confirmed.py
notification_service/templates/: sms.py
