[tool.poetry]
name = "notification_service"
version = "1.1.1"
description = "Notification service"
authors = ["REX"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
sentry-sdk = "^1.42.0"
python-json-logger = "^2.0.7"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
ujson = "^5.9.0"
boto3 = "^1.34.158"
python-telegram-bot = "^21.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.1.1"
flake8 = "^6.0.0"
types-setuptools = "^67.6.0"
types-ujson = "^5.7.0"
pytest-mock = "^3.12.0"
pep8-naming = "^0.13.3"
isort = "^5.13.2"
bandit = "^1.7.6"
flake8-spellcheck = "^0.28.0"
flake8-isort = "^6.1.1"
flake8-eradicate = "^1.5.0"
flake8-comprehensions = "^3.14.0"
flake8-bandit = "^4.1.1"
darglint = "^1.8.1"
black = "^23.12.1"
ipdb = "^0.13.13"
safety = "^2.3.5"
pre-commit-hooks = "^4.5.0"
pre-commit = "^3.6.0"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

